<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="myurl">apitwo.aasaas.net</string>

    <string name="app_name">素邦生活</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="qq_login">QQ登录</string>
    <string name="qq_logout">退出当前账号</string>
    <string name="value">value</string>
    <string name="login">登入</string>
    <string name="registered">注册</string>
    <string name="welcome_language">让广告实现人人传播、人人参与、人人创收</string>

    <string name="account_login">帐号登入</string>
    <string name="user_registered">用户注册</string>
    <string name="pwd_login">使用密码登入</string>
    <string name="other_login">第三方帐号登入</string>
    <string name="confirm_login">确认登入</string>
    <string name="forget_password">忘记密码</string>
    <string name="prefix">+86</string>
    <string name="tips_phonenumber">请输入您的手机号码</string>
    <string name="tips_pwd">请输入您的密码</string>
    <string name="tips_verification_code">请输入验证码 </string>
    <string name="send_verification_code">获取验证码</string>

    <string name="personal_center">个人中心</string>
    <string name="click_View">点击查看个人信息</string>
    <string name="all_orders">我的订单</string>
    <string name="browse_record">浏览记录</string>
    <string name="building_setting_text">帐号绑定</string>
    <string name="buding_bankcard">银行卡绑定</string>
    <string name="address">收货地址</string>
    <string name="system_settings">系统设置</string>
    <string name="feedback">帮助与反馈</string>
    <string name="personal_data">个人资料</string>
    <string name="account_exit">帐号退出</string>
    <string name="change_login_password">修改登入密码</string>
    <string name="change_payment_password">修改支付密码</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="phonenumber">手机号码</string>
    <string name="head_portrait">头像</string>

    <string name="add_consignee_address">添加收货人地址</string>
    <string name="consignee_name">收货人姓名：</string>
    <string name="phone_number_">手机号码：</string>
    <string name="provincial_city_">省市区：</string>
    <string name="detailed_address_">详细地址：</string>
    <string name="set_default_address">设置为默认地址</string>
    <string name="save">保存</string>

    <string name="sign_in_off">已签到</string>
    <string name="sign_in_on">签到</string>

    <item name="tag_first" type="id"></item>
    <item name="tag_third" type="id"></item>
    <item name="tag_second" type="id"></item>
    <item name="tag_forth" type="id"></item>

</resources>